--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,11 @@ Task №1/Task №1/bin/
 MyFirstSolution/MySecondConsole/bin/
 MyFirstSolution/.vs/
 Task №1/.vs/
+Task 3.1/.vs/Task 3.1/v15/.suo
+Task 3.1/.vs/Task 3.1/v15/
+Task 3.1/Task 3.1/bin/
+Task 3.1/Task 3.1/obj/
+Task 3.1/Task 3.2/bin/
+Task 3.1/Task 3.2/obj/
+Task 3.1/Task 3.3/bin/
+Task 3.1/Task 3.3/obj/
