--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,12 @@ Task 3.1/Task 3.2/bin/
 Task 3.1/Task 3.2/obj/
 Task 3.1/Task 3.3/bin/
 Task 3.1/Task 3.3/obj/
+Task 4.1/Task №4/obj/Debug/netcoreapp3.1/Task №4.AssemblyInfoInputs.cache
+Task 4.1/Task №4/obj/
+Task 4.1/Task №4/bin/
+Task 4.1/Task 4.2/obj/
+Task 4.1/Task 4.2/bin/
+Task 4.1/.vs/Task 4/v16/
+Task 4.1/.vs/Task 4.1/DesignTimeBuild/
+Task 3.1/.vs/Task 3.1/v16/
+Task 3.1/.vs/Task 3.1/DesignTimeBuild/.dtbcache
