--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,8 @@ Task 3.1/.vs/Task 3.1/DesignTimeBuild/.dtbcache
 *.targets
 *.exe
 *.CopyComplete
+Task 7/Task 7/obj/Debug/netcoreapp3.1/Task 7.1.AssemblyInfo.cs
+Task 7/Task 7/obj/Debug/netcoreapp3.1/Task 7.AssemblyInfo.cs
+Task 8/Task 8.2/obj/Debug/netcoreapp3.1/Task 8.2.AssemblyInfo.cs
+Task 8/Task 8/obj/Debug/netcoreapp3.1/Task 8.1.AssemblyInfo.cs
+Task 8/Task 8/obj/Debug/netcoreapp3.1/Task 8.AssemblyInfo.cs
