--- a/.gitignore
+++ b/.gitignore
@@ -43,4 +43,11 @@ Task 8/Task 8.2/obj/Debug/netcoreapp3.1/Task 8.2.AssemblyInfo.cs
 Task 8/Task 8/obj/Debug/netcoreapp3.1/Task 8.1.AssemblyInfo.cs
 Task 8/Task 8/obj/Debug/netcoreapp3.1/Task 8.AssemblyInfo.cs
 Task 7/Task 7.2/obj/Debug/netcoreapp3.1/Task 7.2.AssemblyInfo.cs
-*.cs
+HomeTask_1/HomeTask_1.2/obj/Debug/netcoreapp3.1/HomeTask_1.2.AssemblyInfo.cs
+HomeTask_1/HomeTask_1.3/obj/Debug/netcoreapp3.1/HomeTask_1.3.AssemblyInfo.cs
+HomeTask_1/HomeTask_1/obj/Debug/netcoreapp3.1/HomeTask_1.AssemblyInfo.cs
+HomeTask_2/HomeTask_2.5/obj/Debug/netcoreapp3.1/HomeTask_2.5.AssemblyInfo.cs
+HomeTask_2/HomeTask_2/obj/Debug/netcoreapp3.1/HomeTask_2.AssemblyInfo.cs
+HomeTask_2/HomeTask_2.2/obj/Debug/netcoreapp3.1/HomeTask_2.2.AssemblyInfo.cs
+HomeTask_2/HomeTask_2.3/obj/Debug/netcoreapp3.1/HomeTask_2.3.AssemblyInfo.cs
+HomeTask_2/HomeTask_2.4/obj/Debug/netcoreapp3.1/HomeTask_2.4.AssemblyInfo.cs
