--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,51 @@ HomeTask_2/HomeTask_2.2/obj/Debug/netcoreapp3.1/HomeTask_2.2.AssemblyInfo.cs
 HomeTask_2/HomeTask_2.3/obj/Debug/netcoreapp3.1/HomeTask_2.3.AssemblyInfo.cs
 HomeTask_2/HomeTask_2.4/obj/Debug/netcoreapp3.1/HomeTask_2.4.AssemblyInfo.cs
 *.csproj
+HomeTask_1/.vs/HomeTask_1/v15/Server/sqlite3/storage.ide-shm
+HomeTask_1/.vs/HomeTask_1/v15/Server/sqlite3/storage.ide-wal
+HomeTask_2/.vs/HomeTask_2/v15/Server/sqlite3/storage.ide-shm
+HomeTask_2/.vs/HomeTask_2/v15/Server/sqlite3/storage.ide-wal
+HomeTask_3/.vs/HomeTask_3/DesignTimeBuild/.dtbcache.v2
+HomeTask_3/.vs/HomeTask_3/v15/Server/sqlite3/storage.ide-shm
+HomeTask_3/.vs/HomeTask_3/v15/Server/sqlite3/storage.ide-wal
+HomeTask_3/.vs/HomeTask_3/v17/.futdcache.v1
+HomeTask_3/HomeTask_3.2/obj/
+HomeTask_3/HomeTask_3.3/obj/
+HomeTask_3/HomeTask_3.4/obj/
+HomeTask_3/HomeTask_3.5/obj/
+HomeTask_3/HomeTask_3.6/obj/
+HomeTask_3/HomeTask_3/obj/
+HomeTask_4/.vs/HomeTask_4/DesignTimeBuild/.dtbcache.v2
+HomeTask_4/.vs/HomeTask_4/v17/.futdcache.v1
+HomeTask_4/HomeTask_4.10/obj/
+HomeTask_4/HomeTask_4.11/obj/
+HomeTask_4/HomeTask_4.2/obj/
+HomeTask_4/HomeTask_4.3/obj/
+HomeTask_4/HomeTask_4.4/obj/
+HomeTask_4/HomeTask_4.5/obj/
+HomeTask_4/HomeTask_4.7/obj/
+HomeTask_4/HomeTask_4.8/obj/
+HomeTask_4/HomeTask_4.9/obj/
+HomeTask_4/HomeTask_4/obj/
+HomeTask_5/.vs/HomeTask_5/DesignTimeBuild/.dtbcache.v2
+HomeTask_5/.vs/HomeTask_5/v17/.futdcache.v1
+HomeTask_5/HomeTask_5.2/obj/
+HomeTask_5/HomeTask_5.3/obj/
+HomeTask_5/HomeTask_5.4/obj/
+HomeTask_5/HomeTask_5.5/obj/
+HomeTask_5/HomeTask_5.6/obj/
+HomeTask_5/HomeTask_5.7/obj/
+HomeTask_5/HomeTask_5/obj/
+HomeTask_6/.vs/HomeTask_6/DesignTimeBuild/.dtbcache.v2
+HomeTask_6/.vs/HomeTask_6/v15/Server/sqlite3/storage.ide-shm
+HomeTask_6/.vs/HomeTask_6/v15/Server/sqlite3/storage.ide-wal
+HomeTask_6/.vs/HomeTask_6/v17/.futdcache.v1
+HomeTask_6/HomeTask_6.2/obj/
+HomeTask_6/HomeTask_6.3/obj/
+HomeTask_6/HomeTask_6.4/obj/
+HomeTask_6/HomeTask_6.5/obj/
+HomeTask_6/HomeTask_6/obj/
+HomeTask_7/HomeTask_7.2/obj/
+HomeTask_7/HomeTask_7/obj/
+HomeTask_7/.vs/HomeTask_7/DesignTimeBuild/.dtbcache.v2
+HomeTask_7/.vs/HomeTask_7/v17/.futdcache.v1
