--- a/HomeTask_1/HomeTask_1.2/HomeTask_1.2.csproj
+++ b/HomeTask_1/HomeTask_1.2/HomeTask_1.2.csproj
@@ -6,4 +6,8 @@
     <RootNamespace>HomeTask_1._2</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\HomeTask_1\HomeTask_1.csproj" />
+  </ItemGroup>
+
 </Project>
