--- a/HomeTask_2/HomeTask_2.3/HomeTask_2.3.csproj
+++ b/HomeTask_2/HomeTask_2.3/HomeTask_2.3.csproj
@@ -6,4 +6,8 @@
     <RootNamespace>HomeTask_2._3</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\HomeTask_2\HomeTask_2.csproj" />
+  </ItemGroup>
+
 </Project>
