--- a/HomeTask_2/HomeTask_2.4/HomeTask_2.4.csproj
+++ b/HomeTask_2/HomeTask_2.4/HomeTask_2.4.csproj
@@ -1,9 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>HomeTask_2._4</RootNamespace>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\HomeTask_2\HomeTask_2.csproj" />
+  </ItemGroup>
 
 </Project>
