--- a/.gitignore
+++ b/.gitignore
@@ -100,3 +100,4 @@ HomeTask_7/HomeTask_7.2/obj/
 HomeTask_7/HomeTask_7/obj/
 HomeTask_7/.vs/HomeTask_7/DesignTimeBuild/.dtbcache.v2
 HomeTask_7/.vs/HomeTask_7/v17/.futdcache.v1
+MonsterRPG 2.0/.vs/MonsterRPG 2.0/DesignTimeBuild/.dtbcache.v2
