Hero list + Town discription

--- a/.gitignore
+++ b/.gitignore
@@ -105,3 +105,4 @@ MonsterRPG 2.0/MonsterRPG 2.0/obj/Debug/netcoreapp3.1/MonsterRPG 2.0.csproj.Buil
 Heroes3WebApp/Heroes3WebApp/DAL/obj/
 Heroes3WebApp/Heroes3WebApp/Heroes3BusinessLayer/obj/
 Heroes3WebApp/Heroes3WebApp/Heroes3WebApp/obj/
+*.gif
