--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,9 @@ HomeTask_7/.vs/HomeTask_7/DesignTimeBuild/.dtbcache.v2
 HomeTask_7/.vs/HomeTask_7/v17/.futdcache.v1
 MonsterRPG 2.0/.vs/MonsterRPG 2.0/DesignTimeBuild/.dtbcache.v2
 MonsterRPG 2.0/MonsterRPG 2.0/obj/Debug/netcoreapp3.1/MonsterRPG 2.0.csproj.BuildWithSkipAnalyzers
+Heroes3WebApp/Heroes3WebApp/Heroes3WebApp/obj/
+QulixTest/StockPlatformWebAPI/.vs/StockPlatformWebAPI/DesignTimeBuild/.dtbcache.v2
+QulixTest/StockPlatformWebAPI/.vs/StockPlatformWebAPI/v17/.futdcache.v1
+QulixTest/StockPlatformWebAPI/BLL/obj/
+QulixTest/StockPlatformWebAPI/DAL/obj/
+QulixTest/StockPlatformWebAPI/StockPlatformWebAPI/obj/
